# ViPERFX_RE

./: .gitignore  Android.bp  CMakeLists.txt
src/: ViPER4Aidl.cpp  ViPER4Aidl.h  ViPER4Android.cpp  ViPER4Android.h  ViperContext.cpp  ViperContext.h  ViperHexagon.cpp  ViperStub.cpp  log.h  version.c
src/include/: essential.h  hexagon.h  v4a.idl
src/viper/: constants.h
src/viper/effects/: ViPERDDC.cpp  ViPERDDC.h
src/viper/utils/: Biquad.cpp  HighShelf.cpp  IIR_1st.cpp  MultiBiquad.cpp
